--- a/object_detector/pubspec.yaml
+++ b/object_detector/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-
+  tflite: ^1.0.5
+  image_picker: ^0.6.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -43,6 +45,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/yolov2_tiny.txt
+    - assets/yolov2_tiny.tflite
 
   # To add assets to your application, add an assets section, like this:
   # assets:
